Ändrat funktion för visa/dölja element beroende på inloggad/utloggad samt kontroller för giltig token. Skrivit readme.

--- a/src/css/_component.scss
+++ b/src/css/_component.scss
@@ -33,6 +33,10 @@
     position: absolute;
     top: 15px;
     right: 10px;
+
+    @media (max-width: 440px) {
+        top: 75px;
+    }
 }
 
 .logout-btn-corner:hover {
