Lagt till laddningsindikator.

--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -9,7 +9,7 @@ $background-color-form: #f8f8f8;
 $border-color: #ccc;
 $header-footer-color: #5a6f64;
 $header-footer-text-color: #c7c7c7;
-$spinner-blue: #3498db;
+$spinner-green: #5a6f64;
 $spinner-grey: #f3f3f3;
 $white: #fff;
 $error-red: #D83030;
