--- a/src/css/_layout.scss
+++ b/src/css/_layout.scss
@@ -116,6 +116,13 @@ main {
     border-color: black;
 }
 
+#loadingIndicator {
+    display: flex;
+    flex-direction: column;
+    margin: 20px auto;
+    text-align: center;
+}
+
 footer {
     text-align: center;
     background-color: $header-footer-color;
