Åtgärdat fel med att få tillgång till protected.html i utloggat läge.

--- a/src/css/_layout.scss
+++ b/src/css/_layout.scss
@@ -11,6 +11,10 @@ html, body {
     background-color: $background-color-main;
 }
 
+.hidden {
+    display: none;
+}
+
 .page-container {
     display: flex;
     flex-direction: column;
